Change log for zeit.web
=======================

2.52 (unreleased)
-----------------

- FIX: Show date_last_published with adjusted TZ info

- FIX: Prevent and test for ranking area proxy exposures

- FIX: Catch and wrap community request timeouts


2.51 (2016-01-22)
-----------------

- ZON-2598: Introduce Accelerated Mobile Pages (AMP)

- ZON-2604: Add webtrekk pixel to amp article template

- ZON-2628: Redirect to standard article view if AMP is disabled

- ZON-2573: Refactor banner config to XML sources

- ZON-2574: Refactor navigation config to XML sources

- ZON-2654: Move some web.ini settings to XML sources

- ZON-2640: Update css for em class moderation

- BUG-334: Remove gradient overlay for classic fullwidth teaser

- BUG-335: Correctly append /index to (dynamic) folder path redirects

- BUG-337: Show sharing links on video pages

- FIX: IA: use date-last-published so articles get updated at Facebook

- MAINT: Allow template-only centerpage modules to be discovered


2.50 (2016-01-20)
-----------------

- ZON-2664: Add link to AMP to head if article is AMP article

- ZON-2576: Extract dogpile.cache integration to `pyramid_dogpile_cache2`,
  so vivi can use it, too

- BUG-328: Omit default page paramter in pagination on ranking areas

- BUG-78: Prevent IE from searching for a browserconfig.xml

- FIX: Scale crossword puzzle to full-width in print

- ZON-2535: Start ZMO moveover

- BUG-270: Make ZMO portraiboxes also visible on mobile and tablet


2.49 (2016-01-19)
-----------------

- ZON-2632: Remove check for "static" galleries

- ZON-2595: IVW and Webtrekk pixels in instantarticles

- ZON-2634: Framebuilder can enable Webtrekk

- ZON-2649: Framebuilder can enable IVW

- MAINT: desktop_only parameter in framebuilder needs no value

- MAINT: Remove old iqd code

- MAINT: Remove unused IVW file (old version)


2.48 (2016-01-14)
-----------------

- FIX: FB Instant Articles: Add image copyrights

- BUG-315: Update cookie link in footer

